--- a/app/src/main/res/layout/item_status_details_of_customer.xml
+++ b/app/src/main/res/layout/item_status_details_of_customer.xml
@@ -139,10 +139,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <!--5)ScheduleDateTime-->
+        <!--5)Schedule A Call / Schedule A Visit-->
+        <TextView
+            android:id="@+id/txtScheduleACall_ScheduleAVisit"
+            app:layout_constraintTop_toBottomOf="@id/txtMidStatusInfo3"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textColor="@color/black"
+            android:textStyle="normal"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_3sdp"
+            android:textSize="@dimen/_11ssp"
+            android:visibility="gone"
+            tools:text="Schedule A Call / Schedule A Visit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+
+        <!--6)ScheduleDateTime-->
         <TextView
             android:id="@+id/txtScheduleDateStatusInfo"
-            app:layout_constraintTop_toBottomOf="@id/txtMidStatusInfo3"
+            app:layout_constraintTop_toBottomOf="@id/txtScheduleACall_ScheduleAVisit"
             app:layout_constraintStart_toStartOf="parent"
             android:textColor="@color/black"
             android:textStyle="normal"
