StatusOfCustomerDetailsAdapter - checking for empty values , item_status_details_of_customer - alignment adjustment

--- a/app/src/main/res/layout/item_status_details_of_customer.xml
+++ b/app/src/main/res/layout/item_status_details_of_customer.xml
@@ -177,7 +177,7 @@
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_3sdp"
             app:layout_constraintTop_toBottomOf="@+id/txtScheduleDateStatusInfo"
-            app:layout_constraintStart_toEndOf="@+id/txtMidStatusInfo3"
+            app:layout_constraintStart_toStartOf="parent"
             android:visibility="gone"
             android:textColor="@color/black"
             android:textStyle="normal"
@@ -192,7 +192,7 @@
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_3sdp"
             app:layout_constraintTop_toBottomOf="@+id/txtAmountCollected"
-            app:layout_constraintStart_toStartOf="@+id/txtMidStatusInfo3"
+            app:layout_constraintStart_toStartOf="parent"
             android:visibility="gone"
             android:textColor="@color/black"
             android:textStyle="normal"
@@ -207,7 +207,7 @@
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_3sdp"
             app:layout_constraintTop_toBottomOf="@+id/txtBankName"
-            app:layout_constraintStart_toStartOf="@+id/txtMidStatusInfo3"
+            app:layout_constraintStart_toStartOf="parent"
             android:visibility="gone"
             android:textColor="@color/black"
             android:textStyle="normal"
@@ -222,7 +222,7 @@
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_3sdp"
             app:layout_constraintTop_toBottomOf="@+id/txtChequeNumber"
-            app:layout_constraintStart_toStartOf="@+id/txtMidStatusInfo3"
+            app:layout_constraintStart_toStartOf="parent"
             android:visibility="gone"
             android:textColor="@color/black"
             android:textStyle="normal"
@@ -237,7 +237,7 @@
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_3sdp"
             app:layout_constraintTop_toBottomOf="@+id/txtChequeDate"
-            app:layout_constraintStart_toStartOf="@+id/txtMidStatusInfo3"
+            app:layout_constraintStart_toStartOf="parent"
             android:visibility="gone"
             android:textColor="@color/black"
             android:textStyle="normal"
@@ -252,7 +252,7 @@
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_3sdp"
             app:layout_constraintTop_toBottomOf="@+id/txtRelativeName"
-            app:layout_constraintStart_toStartOf="@+id/txtMidStatusInfo3"
+            app:layout_constraintStart_toStartOf="parent"
             android:visibility="gone"
             android:textColor="@color/black"
             android:textStyle="normal"
@@ -267,7 +267,7 @@
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_3sdp"
             app:layout_constraintTop_toBottomOf="@+id/txtRelativeContact"
-            app:layout_constraintStart_toStartOf="@+id/txtMidStatusInfo3"
+            app:layout_constraintStart_toStartOf="parent"
             android:visibility="gone"
             android:textColor="@color/black"
             android:textStyle="normal"
@@ -282,7 +282,7 @@
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_3sdp"
             app:layout_constraintTop_toBottomOf="@+id/txtFOName"
-            app:layout_constraintStart_toStartOf="@+id/txtMidStatusInfo3"
+            app:layout_constraintStart_toStartOf="parent"
             android:visibility="gone"
             android:textColor="@color/black"
             android:textStyle="normal"
@@ -298,7 +298,7 @@
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_3sdp"
             app:layout_constraintTop_toBottomOf="@+id/txtDateOfVisitPromised"
-            app:layout_constraintStart_toStartOf="@+id/txtMidStatusInfo3"
+            app:layout_constraintStart_toStartOf="parent"
             android:visibility="gone"
             android:textColor="@color/black"
             android:textStyle="normal"
