--- a/app/src/main/res/layout/item_status_details_of_customer.xml
+++ b/app/src/main/res/layout/item_status_details_of_customer.xml
@@ -312,7 +312,7 @@
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_3sdp"
             app:layout_constraintTop_toBottomOf="@+id/txtReasonOthers"
-            app:layout_constraintStart_toStartOf="@+id/txtMidStatusInfo3"
+            app:layout_constraintStart_toStartOf="parent"
             android:visibility="gone"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -332,7 +332,7 @@
             android:textSize="@dimen/_11ssp"
             android:maxLines="5"
             android:ellipsize="end"
-            android:layout_width="@dimen/_150sdp"
+            android:layout_width="@dimen/_200sdp"
             android:layout_height="wrap_content"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
