--- a/app/src/main/res/layout/custom_dialog_radio_button.xml
+++ b/app/src/main/res/layout/custom_dialog_radio_button.xml
@@ -30,6 +30,7 @@
                 android:layout_gravity="center"
                 android:text="@string/reason_for_visit"
                 android:textColor="@color/white"
+                android:textAllCaps="true"
                 android:textSize="@dimen/_13ssp" />
 
 
