--- a/app/src/main/res/layout/item_notes_history.xml
+++ b/app/src/main/res/layout/item_notes_history.xml
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="@dimen/_5sdp"
         android:textColor="@color/black"
-        app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintTop_toBottomOf="@id/txtNotesHistoryDateTime"
         android:layout_marginTop="@dimen/_2sdp"
         tools:text="UserName"
         android:layout_width="wrap_content"
@@ -27,9 +27,10 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="@dimen/_5sdp"
         android:textColor="@color/black"
-       app:layout_constraintTop_toBottomOf="@id/txtNotesHistoryUserName"
+      app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_2sdp"
         tools:text="17-06-2023 12:11 AM"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -42,7 +43,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="@dimen/_5sdp"
         android:textColor="@color/black"
-       app:layout_constraintTop_toBottomOf="@id/txtNotesHistoryDateTime"
+       app:layout_constraintTop_toBottomOf="@id/txtNotesHistoryUserName"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:text="Customer was busy"
         android:inputType="textMultiLine"
