item_details_of_customer -CallLogo placed at the end of Mobile Number when coming from VisitsForTheDayFlow

--- a/app/src/main/res/layout/item_details_of_customer.xml
+++ b/app/src/main/res/layout/item_details_of_customer.xml
@@ -51,13 +51,13 @@
 
         <ImageView
             android:id="@+id/ivCallLogo"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_22sdp"
             android:src="@drawable/call_round_icon"
-            android:layout_marginEnd="@dimen/_3sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/labelDetailName"
-           app:layout_constraintEnd_toStartOf="@id/txtDetailName"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/labelDetailName" />
 
 
