--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <base-config cleartextTrafficPermitted="true">
+        <trust-anchors>
+            <certificates src="system" />
+           <!-- <certificates src="user" />-->
+            <certificates src="@raw/base64_encoded_aakhyatechapps" />
+        </trust-anchors>
     </base-config>
 </network-security-config>
 
